--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <button placeholder="submit" id="add"></button>
             </section>
 
-     <br> <p align=center><h4><font color="yellow">APP DESIGN BY "SHIVM_KACHHADIYA PVT.LTD" <br><br>© all rights under "shivam_kachhadiya pvt.ltd...</h4></font></p>
+     <br> <p align=center><h4><font color="yellow">APP DESIGN BY "SHIVM_KACHHADIYA PVT.LTD" <br><br>© </h4></font></p>
             <section class="display">
                 <div class="wrapper">
                     <h2 id="cityoutput"></h2>
